content/docs/pl/client/v0.1/participant/index.mdx
---
title: Dla uczestnika
description: Jak się zalogować, wejść do aktywności, wysłać rozwiązanie i przeczytać, co wróciło.
source: en/client/v0.1/participant/index.mdx
sourceSha256: 66e9f8cac766189a23d9959403bc5e48053ded2425641a1e1d9df98a37d59ed8
---

Jesteś tu po to, żeby wziąć udział w zawodach albo w zajęciach, a nie żeby je
prowadzić. Te strony opisują dokładnie te ekrany, które możesz otworzyć.

## Na szybko

| Chcesz | Przeczytaj |
|---|---|
| w ogóle wejść | [Logowanie](/pl/client/v0.1/participant/signing-in) |
| otworzyć aktywność z poziomu swojego kursu | [Wejście z kursu](/pl/client/v0.1/participant/arriving-from-a-course) |
| znaleźć swoje zawody albo zajęcia, albo się zapisać | [Aktywności](/pl/client/v0.1/participant/activities) |
| przeczytać regulamin, jeżeli organizator go opublikował | [Regulamin](/pl/client/v0.1/participant/rules) |
| wiedzieć, dlaczego seria nic nie pokazuje | [Rundy, tygodnie i zajęcia](/pl/client/v0.1/participant/series) |
| przeczytać zadanie albo sprawdzić, dlaczego przycisk wysyłki jest wyszarzony | [Zadania](/pl/client/v0.1/participant/problems) |
| wysłać rozwiązanie | [Wysyłanie rozwiązania](/pl/client/v0.1/participant/submitting) |
| sprawdzić, co się z nim stało | [Co się stało z moim zgłoszeniem](/pl/client/v0.1/participant/results) |
| odzyskać swój kod albo poprawić go i wysłać ponownie | [Kod źródłowy](/pl/client/v0.1/participant/source-code) |
| zobaczyć, na którym jesteś miejscu | [Ranking](/pl/client/v0.1/participant/ranking) |
| o coś zapytać organizatorów | [Pytania i ogłoszenia](/pl/client/v0.1/participant/questions) |

## Jak to jest zbudowane

**Aktywność** to jedne zawody albo jedne zajęcia. W środku są **serie** — w
zawodach seria to runda, na zajęciach tydzień albo zajęcia. Każda seria zawiera
**zadania**. Do zadania wysyłasz **zgłoszenie**, Runner je ocenia, a wynik
wraca.

Wszystko, co robisz, dzieje się wewnątrz jednej aktywności. Nawigacja po lewej
zmienia się, gdy do jakiejś wejdziesz, a to, co w niej znajdziesz, zależy od
tego, co włączył organizator.

## Dwie rzeczy, które warto wiedzieć przed startem

**Zadania otwierają się o określonej godzinie, a nie wtedy, gdy odświeżysz.**
Ekran sam się aktualizuje, gdy runda się otwiera, zostaje wstrzymana albo się
kończy. Nie musisz przeładowywać strony.

**Każdy z trzech rodzajów zadań wymaga czego innego.** Jeden przyjmuje program,
drugi przyjmuje program i wysyła go do zewnętrznego archiwum, a trzeci przyjmuje
pliki z odpowiedziami, bez programu. Od tego, na które zadanie patrzysz, zależy,
co pokaże formularz wysyłki. Zobacz
[Wysyłanie rozwiązania](/pl/client/v0.1/participant/submitting).
